# ai-travel-agent

./: README.md  fast_api.py  main.py  pyproject.toml  tool.py
frontend/: index.html  style.css
